Created landing page, updated color scheme and added a helper

--- a/apps/play_it_cool_web/lib/play_it_cool_web/templates/layout/app.html.eex
+++ b/apps/play_it_cool_web/lib/play_it_cool_web/templates/layout/app.html.eex
@@ -7,7 +7,7 @@
     <meta name="Description" content="Play It Cool - A group guessing game where everyone except one person knows a word and has to pretend he knows it.">
     <title>Play It Cool | Free fun game for everyone</title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
-    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&family=Varela+Round&display=swap" rel="stylesheet" />
     <script defer type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </head>
   <body>
