--- a/apps/play_it_cool_web/assets/css/app.scss
+++ b/apps/play_it_cool_web/assets/css/app.scss
@@ -8,7 +8,7 @@ html {
   position: relative;
   box-sizing: border-box;
   color: #fefeff;
-  font-family: 'Balsamiq Sans', 'Helvetica', 'Arial', sans-serif;
+  font-family: 'Ubuntu', 'Helvetica', 'Arial', sans-serif;
   font-size: 1.6em;
   font-weight: 300;
   line-height: 1.6;
