--- a/apps/play_it_cool_web/assets/css/homescreen.scss
+++ b/apps/play_it_cool_web/assets/css/homescreen.scss
@@ -1,62 +1,191 @@
 .main {
-  min-height: calc(100vh - 48px);
   height: 100%;
-  width: calc(100% - 48px);
+  width: 100%;
   display: flex;
   align-items: center;
   color: black;
   flex-direction: column;
   background-color: #50247a;
-  background-image: url('/images/staticBackground.svg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding: 24px;
+  background-image: url('/images/static_background.svg');
+  position: relative;
+
+  p {
+    line-height: normal;
+  }
 
   .hero {
     display: flex;
     align-items: center;
+    justify-content: space-evenly;
     flex-direction: column;
+    min-height: 100vh;
+    background-image: url('/images/static_background.svg');
     width: 100%;
 
-    h1 {
-      color: #fff864;
-    }
-
-    p {
-      color: #71e284;
-    }
-
-    a {
-      padding: 8px 24px;
-      margin: 24px;
-      text-decoration: none;
-      color: #50247a;
-      background-color: #fff864;
-      border-radius: 50px;
-      box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3);
+    img {
+      min-width: 300px;
+      width: 80%;
+      transition: all 0.2s ease-in-out;
 
       &:hover {
+        transform: translateY(-5px);
+      }
+    }
+  }
+  @keyframes animated-button {
+    0% {
+      background-color: rgba(63, 94, 251, 1);
+    }
+    50% {
+      background-color: rgba(252, 70, 107, 1);
+    }
+    100% {
+      background-color: rgba(63, 94, 251, 1);
+    }
+  }
+  .play-now-container {
+    padding: 4px;
+
+    a {
+      font-family: 'Varela Round', 'Helvetica', 'Arial', sans-serif;
+      padding: 16px 24px;
+      margin: 12px;
+      text-decoration: none;
+      color: #fc466b;
+      background-color: #ffffff;
+      border-radius: 50px;
+      transition: all 0.2s ease-in-out;
+      box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3);
+      text-transform: uppercase;
+
+      &:hover {
+        font-weight: bold;
+        animation: animated-button 3s linear reverse infinite;
+        overflow: hidden;
         transform: translateY(2px);
-        box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.3);
+        box-shadow: 0px 0px 100px 0px rgba(255, 255, 255, 0.3);
+        color: #ffffff;
+        border: 4px solid rgba(255, 255, 255, 0.7);
+      }
+    }
+  }
+  .text-background {
+    padding: 24px;
+    background: rgba(255, 255, 255, 0.8);
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 3px;
+    margin: 128px;
+
+    @media screen and (max-width: 800px) {
+      margin: 8px;
+      padding: 12px;
+    }
+  }
+  .content {
+    width: 100%;
+    background: rgba(255, 255, 255, 0.8);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 64px;
+
+    .fancy-text {
+      font-family: 'Varela Round', 'Helvetica', 'Arial', sans-serif;
+      background: radial-gradient(circle, rgba(63, 94, 251, 1) 0%, rgba(252, 70, 107, 1) 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      text-transform: uppercase;
+
+      display: flex;
+      justify-content: center;
+      color: #3f5efb;
+      margin: 1rem;
+      font-size: 1.4rem;
+      text-align: center;
+
+      @media screen and (max-width: 800px) {
+        margin: 8px;
+      }
+    }
+
+    .explanation {
+      width: 100%;
+      display: flex;
+      justify-content: space-evenly;
+
+      @media screen and (max-width: 1000px) {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .explain {
+        padding: 48px 0;
+        background: rgba(255, 255, 255, 0.7);
+        width: 30%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        @media screen and (max-width: 1000px) {
+          width: 100%;
+        }
+
+        h3 {
+          font-family: 'Varela Round', 'Helvetica', 'Arial', sans-serif;
+          color: #fc466b;
+          margin-bottom: 0.5rem;
+          width: 80%;
+          max-width: 1000px;
+
+          font-size: 2rem;
+          @media screen and (max-width: 800px) {
+            font-size: 1.4rem;
+          }
+        }
+        p {
+          margin-top: 0.5rem;
+          color: #3f5efb;
+          width: 80%;
+          max-width: 1000px;
+
+          font-size: 1.5rem;
+          height: 300px;
+          @media screen and (max-width: 800px) {
+            font-size: 1.2rem;
+          }
+
+          strong {
+            color: #fc466b;
+          }
+        }
+
+        img {
+          width: 100%;
+          max-width: 1000px;
+        }
       }
     }
   }
 
-  .three {
+  .bottom {
+    margin: 48px;
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
 
-    @media screen and (max-width: 800px) {
-      flex-direction: column;
-    }
-
-    & > div {
-      margin: 24px;
-      width: 30%;
-      color: #fff864;
+    footer {
+      width: calc(100% - 48px);
+      margin: 0;
+      margin-top: 128px;
+      border-radius: 0;
+      font-size: 1rem;
 
       @media screen and (max-width: 800px) {
-        width: 90%;
+        font-size: 0.7rem;
       }
     }
   }
